--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="po-wrapper">
-  <po-toolbar p-title="AppName"></po-toolbar>
+<div class="wrapper">
+  <section class="main-section">
+    <img src='/assets/logo.png'>
+    <app-search-bar></app-search-bar>
+  </section>
+  <img class="svg-wave" src="/assets/new-wave-cropped.svg">
+  <app-search-results></app-search-results>
 
-  <po-menu [p-menus]="menus"></po-menu>
-
-  <po-page-default p-title="AppName">
-    <p> AppName page </p>
-  </po-page-default>
 </div>
