--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,9 +1,10 @@
 <div class="po-row flex-center">
   <div class="search-wrapper po-lg-4 po-md-12">
     <div class="search-bar">
-      <input #searchbar (blur)="clearMatches()" (focus)="checkMatches($event)" (input)="checkMatches($event)"
-        type='search' placeholder="Busque por uma empresa (ex: Totvs)" />
-      <button (mousedown)="handleSearch(searchbar.value, searchbar)">
+      <input #searchbar (blur)="clearMatches()" (input)="checkMatches($event)" (focus)="checkMatches($event)"
+        (keydown.enter)="handleSearch(searchbar.value, searchbar)" type='search'
+        placeholder="Busque por uma empresa (ex: Totvs)" />
+      <button (click)="handleSearch(searchbar.value, searchbar)">
         <span class="po-icon po-icon-search"></span>
       </button>
       <div class="matches-wrapper" [ngClass]="{'visible': matches.length}">
