[ADD] General improvements, animations, focus events

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="wrapper">
   <section class="main-section">
-    <img src='/assets/logo.png'>
+    <img src='./assets/logo.png'>
     <app-search-bar></app-search-bar>
   </section>
-  <img class="svg-wave" src="/assets/new-wave-cropped.svg">
+  <img class="svg-wave" src="./assets/new-wave-cropped.svg">
   <app-search-results></app-search-results>
 
 </div>
