--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -9,6 +9,10 @@
   padding: 1rem;
   padding-bottom: unset;
 
+  &:not(:focus-within) .visible {
+    visibility: hidden;
+  }
+
   .search-bar {
     display: flex;
     font-size: 1.2rem;
@@ -81,12 +85,15 @@
   transition: opacity .2s ease, transform .3s ease;
   visibility: hidden;
   transform: translateY(-5px);
+  filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.1));
+  z-index: 2;
 
 
   &.visible {
     transform: translateY(0px);
     visibility: visible;
     opacity: 1;
+
   }
 
   button {
@@ -98,7 +105,8 @@
     background: unset;
     width: 100%;
 
-    &:hover {
+    &:hover,
+    &:focus {
       background-color: #cfcfcf3b;
     }
   }
